--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,3 +1,4 @@
+
 version: '3'
 
 volumes:
@@ -12,19 +13,19 @@ services:
       - pg_data:/var/lib/postgresql/data
     env_file: .env
   backend:
-    build: ./backend/
+    image: stepan2204/kittygram_backend
     env_file: .env
     volumes:
       - static:/backend_static
       - media:/app/media
   frontend:
     env_file: .env
-    build: ./frontend/
+    image: stepan2204/kittygram_frontend
     command: cp -r /app/build/. /static/
     volumes:
       - static:/static
   gateway:
-    build: ./nginx/
+    image: stepan2204/kittygram_gateway
     env_file: .env
     ports:
       - 9000:80
