--- a/tests.yml
+++ b/tests.yml
@@ -1,4 +1,4 @@
 repo_owner: stepan2204
 kittygram_domain: https://kittyyandex.zapto.org
-taski_domain: http://taskiyandex.zapto.org
+taski_domain: https://taskiyandex.zapto.org
 dockerhub_username: stepan2204
