--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -18,6 +18,8 @@ services:
     volumes:
       - static:/backend_static
       - media:/app/media
+    depends_on:
+      - db
   frontend:
     env_file: .env
     image: stepan2204/kittygram_frontend
@@ -32,3 +34,6 @@ services:
     volumes:
       - static:/static
       - media:/app/media
+    depends_on:
+      - backend
+      - frontend
