--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,10 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/admin/;
   }
-
+  location /media/ {
+    proxy_set_header Host $http_host;
+    root /app/;
+  }
   location / {
     alias /static/;
     try_files $uri $uri/ /index.html;
